--- a/css/styles.css
+++ b/css/styles.css
@@ -190,3 +190,77 @@ body {
   text-transform: uppercase;
   color: var(--light);
 }
+
+.button-all {
+  font-style: inherit;
+  width: 69px;
+  height: 48px;
+  background: var(--pressed-state);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: var(--white-background);
+}
+
+.button-web {
+  font-style: inherit;
+  width: 116px;
+  height: 48px;
+  background: var(--light);
+  border: 1px solid var(--modal-background);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+}
+
+.button-app {
+  font-style: inherit;
+  width: 78px;
+  height: 48px;
+  background: var(--light);
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+}
+
+.button-design {
+  font-style: inherit;
+  width: 101px;
+  height: 48px;
+  background: var(--light);
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+  ont-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+}
+
+.button-marketing {
+  font-style: normal;
+  width: 126px;
+  height: 48px;
+  background: var(--light);
+  border: 1px solid var(--modal-background);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--primary-brand);
+}
