--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 
 .header-logo {
   font-family: 'Raleway', sans-serif;
-  font-weight: 800;
+  font-weight: 500;
   font-size: 18px;
   line-height: 1.1;
   letter-spacing: 0.03em;
@@ -33,7 +33,7 @@ body {
 }
 
 .header-studio {
-  font-weight: 800;
+  font-weight: 500;
   font-size: 18px;
   line-height: 1.1;
   letter-spacing: 0.03em;
@@ -42,7 +42,7 @@ body {
 }
 
 .header-nav {
-  font-weight: 800;
+  font-weight: 500;
   font-size: 18px;
   font-style: normal;
   line-height: 1.1;
@@ -52,7 +52,7 @@ body {
 }
 
 .nav-link {
-  color: inherit;
+  color: var(--dark);
   font-style: normal;
   text-decoration: inherit;
 }
@@ -71,7 +71,7 @@ body {
 }
 
 .adress-link {
-  color: inherit;
+  color: var(--dark);
   text-decoration: inherit;
 }
 
@@ -191,31 +191,38 @@ body {
   color: var(--light);
 }
 
-.button-all {
-  font-style: inherit;
+/*portfolkio*/
+
+.filter-buttons {
   width: 69px;
   height: 48px;
   background: var(--pressed-state);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+}
+
+.filter-buttons-list {
+  width: 116px;
+  height: 48px;
+  background: #f4f4fd;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+}
+
+.button-app {
+  font-family: 'Roboto';
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
-  display: flex;
-  align-items: center;
-  text-align: center;
+  line-height: 1.5px;
   letter-spacing: 0.04em;
   color: var(--white-background);
 }
 
-.button-web {
-  font-style: inherit;
-  width: 116px;
-  height: 48px;
-  background: var(--light);
-  border: 1px solid var(--modal-background);
-  border-radius: 4px;
+.button-list {
+  font-family: 'Roboto';
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -223,44 +230,22 @@ body {
   color: var(--primary-brand);
 }
 
-.button-app {
-  font-style: inherit;
-  width: 78px;
-  height: 48px;
-  background: var(--light);
-  border: 1px solid var(--accent);
-  border-radius: 4px;
+.list-of-services {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--primary-brand);
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--dark);
 }
 
-.button-design {
-  font-style: inherit;
-  width: 101px;
-  height: 48px;
-  background: var(--light);
-  border: 1px solid var(--accent);
-  border-radius: 4px;
-  ont-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--primary-brand);
-}
-
-.button-marketing {
+.list-description {
+  width: 75px;
+  height: 24px;
+  font-family: 'Roboto';
   font-style: normal;
-  width: 126px;
-  height: 48px;
-  background: var(--light);
-  border: 1px solid var(--modal-background);
-  border-radius: 4px;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--primary-brand);
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--text);
 }
